# trainee-tracker

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.prod.json
.github/workflows/: release.yml  test.yml
src/: auth.rs  codility.rs  config.rs  course.rs  endpoints.rs  frontend.rs  github_accounts.rs  google_auth.rs  google_groups.rs  lib.rs  main.rs  mentoring.rs  newtypes.rs  octocrab.rs  pr_comments.rs  prs.rs  register.rs  reviewer_staff_info.rs  sheets.rs  slack.rs
templates/: google-groups.html  index.html  list-courses.html  redirect.html  review-metrics.html  reviewer-staff-summary.html  reviewers.html  trainee-batch.html
