[package]
name = "trainee-tracker"
version = "0.1.0"
edition = "2021"
default-run = "trainee-tracker"

[dependencies]
anyhow = "1"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "original-uri"] }
chrono = "0.4.41"
chrono-tz = "0.10.3"
futures = "0.3.31"
google-drive = "0.7.0"
http = "1.3.1"
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "http1",
    "http2",
    "logging",
    "ring",
    "tls12",
    "webpki-tokio",
] }
hyper-util = "0.1.14"
indexmap = { version = "2.9.0", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
octocrab = "0.44.1"
octocrab-rate-limiter = "0.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde-env-field = "0.3.2"
serde_json = "1"
sheets = "0.7.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
