[package]
name = "trainee-tracker"
version = "0.1.0"
edition = "2024"
default-run = "trainee-tracker"

[dependencies]
anyhow = "1"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "original-uri"] }
case_insensitive_string = { version = "0.2.10", features = ["serde"] }
chrono = "0.4.43"
chrono-tz = "0.10.3"
const_format = "0.2.35"
dotenv = "0.15.0"
# Until https://github.com/johnstonskj/rust-email_address/pull/43 is merged and released.
email_address = { git = "https://github.com/illicitonion/rust-email_address.git", rev = "12cd9762a166b79a227beaa90b2f60a768d7c55c" }
futures = "0.3.31"
google-drive = "0.7.0"
google-sheets4 = "6.0.0"
gsuite-api = "0.7.0"
http = "1.3.1"
http-serde = "2.1.1"
humantime = "2.3.0"
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "http1",
    "http2",
    "logging",
    "ring",
    "tls12",
    "webpki-tokio",
] }
hyper-util = "0.1.14"
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
maplit = "1.0.2"
md5 = "0.8.0"
moka = { version = "0.12.10", features = ["future"] }
# Until https://github.com/XAMPPRocky/octocrab/pull/854 is released.
octocrab = { git = "https://github.com/XAMPPRocky/octocrab.git", rev = "460733dd3f49863b159ffb48050ab9523300ff84" }
octocrab-rate-limiter = "0.1.1"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde-env-field = "0.4.0"
serde_json = "1"
serde_urlencoded = "0.7.1"
sheets = "0.7.0"
slack-with-types = "0.1.1"
stats-cli = "3.0.1"
strum_macros = "0.27.2"
time = "0.3.47"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[lints.clippy]
# foo.clone() feels more clear than *foo for copying.
clone_on_copy = "allow"
# Because only idents not expressions are allowed inline, sometimes switching between the two leaves reasonable code Clippy dislikes.
uninlined_format_args = "allow"
